--- a/apply.html
+++ b/apply.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="tito-application">
+    <div class="tito-application application">
       <h1 class="app-heading">APPLICATION</h1>
       <a href="./index.html" class="home-link">home</a>
       <div>
