--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     />
   </head>
   <body>
-    <div class="banner">
+    <div class="banner home">
       <h1 class="title-banner">
         THE CULT OF TITO
       </h1>
     </div>
-    <div class="apply-link">
+    <div class="apply-link home">
       <a href="./apply.html" class="app-link">APPLY</a>
     </div>
   </body>
