--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <div class="apply-link home">
       <a href="./apply.html" class="app-link">APPLY</a>
     </div>
+    <div class="gallery-page home">
+      <a href="./gallery.html" class="gallery-link" id="gallery">GALLERY</a>
+    </div>
   </body>
 </html>
