changed message size

--- a/apply.html
+++ b/apply.html
@@ -21,7 +21,7 @@
             name="name"
             id="name"
             class="form-info-input"
-            placeholder="Firstname Lastname"
+            placeholder="Name"
           />
           <br />
 
