changed message box size

--- a/apply.html
+++ b/apply.html
@@ -35,13 +35,7 @@
           <br />
           <label for="intent" class="form-info-label">Message</label>
           <br />
-          <textarea
-            name="intent"
-            id="intent"
-            cols="100"
-            rows="10"
-            width="50vw"
-          ></textarea>
+          <textarea name="intent" id="intent" cols="50" rows="10"></textarea>
           <br />
           <input
             type="submit"
