made changes to be more responsive to phone users

--- a/apply.html
+++ b/apply.html
@@ -30,12 +30,12 @@
             name="email"
             id="email"
             class="form-info-input"
-            placeholder="email@email.com"
+            placeholder="email"
           />
           <br />
           <label for="intent" class="form-info-label">Message</label>
           <br />
-          <textarea name="intent" id="intent" cols="50" rows="10"></textarea>
+          <textarea name="intent" id="intent"></textarea>
           <br />
           <input
             type="submit"
